force-app/main/default/objects/Project__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Owned_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>