force-app/main/default/objects/Project__c/fields/Functional_Owner__c.field-meta.xml
<CustomField>
    <fullName>Functional_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Functional Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Functional_Owned_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>