force-app/main/default/objects/Project__c/fields/Methodology__c.field-meta.xml
<CustomField>
    <fullName>Methodology__c</fullName>
    <label>Methodology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kanban</fullName>
                <default>true</default>
                <label>Kanban</label>
            </value>
            <value>
                <fullName>Scrum</fullName>
            </value>
            <value>
                <fullName>SAFe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>