force-app/main/default/objects/Project__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Owned_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>