force-app/main/default/objects/Project__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Project Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>