force-app/main/default/objects/Project__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Support_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>