force-app/main/default/objects/Project__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
                <label>P1 – Critical</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <default>true</default>
                <label>P2 – High</label>
            </value>
            <value>
                <fullName>P3</fullName>
                <label>P3 – Medium</label>
            </value>
            <value>
                <fullName>P4</fullName>
                <label>P4 – Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>