force-app/main/default/objects/Project__c/fields/Technical_Owner__c.field-meta.xml
<CustomField>
    <fullName>Technical_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Technical_Owned_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>