force-app/main/default/objects/Project__c/validationRules/Technical_Support_Requires_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Technical_Support_Requires_Parent</fullName>
    <active>true</active>
    <description>Technical Support projects must reference a parent (completed) project.</description>
    <errorConditionFormula>ISPICKVAL(Project_Type__c, &apos;Technical Support&apos;) &amp;&amp; ISBLANK(Parent_Project__c)</errorConditionFormula>
    <errorMessage>A Technical Support project must reference a Parent Project (the project it is supporting).</errorMessage>
</ValidationRule>